--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
-    "@tiptap/pm": "^3.10.5",
-    "@tiptap/react": "^3.10.5",
-    "@tiptap/starter-kit": "^3.10.5",
+    "@tiptap/extension-table": "^2.10.2",
+    "@tiptap/extension-table-cell": "^2.10.2",
+    "@tiptap/extension-table-header": "^2.10.2",
+    "@tiptap/extension-table-row": "^2.10.2",
+    "@tiptap/extension-task-item": "^2.10.2",
+    "@tiptap/extension-task-list": "^2.10.2",
+    "@tiptap/pm": "^2.10.2",
+    "@tiptap/react": "^2.10.2",
+    "@tiptap/starter-kit": "^2.10.2",
     "@types/react": "^19.2.3",
     "@types/react-dom": "^19.2.3",
     "install": "^0.13.0",
