--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
   "dependencies": {
+    "@tiptap/extension-color": "^2.10.2",
+    "@tiptap/extension-font-family": "^2.10.2",
+    "@tiptap/extension-heading": "^2.10.2",
+    "@tiptap/extension-highlight": "^2.10.2",
+    "@tiptap/extension-image": "^2.10.2",
+    "@tiptap/extension-link": "^2.10.2",
     "@tiptap/extension-table": "^2.10.2",
     "@tiptap/extension-table-cell": "^2.10.2",
     "@tiptap/extension-table-header": "^2.10.2",
     "@tiptap/extension-table-row": "^2.10.2",
     "@tiptap/extension-task-item": "^2.10.2",
     "@tiptap/extension-task-list": "^2.10.2",
+    "@tiptap/extension-text-align": "^2.10.2",
+    "@tiptap/extension-text-style": "^2.10.2",
+    "@tiptap/extension-underline": "^2.10.2",
     "@tiptap/pm": "^2.10.2",
     "@tiptap/react": "^2.10.2",
-    "@tiptap/starter-kit": "^2.10.2",
+    "@tiptap/starter-kit": "^2.27.1",
     "@types/react": "^19.2.3",
     "@types/react-dom": "^19.2.3",
     "install": "^0.13.0",
     "next": "^16.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-color": "^2.19.3",
+    "react-dom": "^18.3.1",
+    "tiptap-extension-resize-image": "^1.2.1",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@types/react-color": "^3.0.12",
     "typescript": "^5.9.3"
   },
   "scripts": {
